--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "*",
-        "tightenco/ziggy": "^2.0"
+        "pusher/pusher-php-server": "^7.2",
+        "tightenco/ziggy": "^2.6"
     },
     "require-dev": {
         "backpack/generators": "^4.0",
