--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.4",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "laravel-echo": "^2.2.0",
+        "pusher-js": "^8.4.0",
+        "ziggy-js": "^2.6.0"
     }
 }
